Hide duplicate title

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -82,4 +82,10 @@
   <meta property="og:image" content="{{ "images/govuk-opengraph-image.png" | absURL }}">
   {{ end }}
 
+  <style>
+    h1.title.toc-ignore {
+      display: none;
+    }
+  </style>
+
 </head>
